<resources>
    <string name="app_name">段子联盟</string>
    <string name="out_app">再按一次退出程序</string>

    <string name="title_text">段子</string>
    <string name="title_image">趣图</string>
    <string name="title_qingqutu">荤漫画</string>
    <string name="title_chengren">荤段子</string>
    <string name="title_more">更多</string>

    <string name="loading">加载中…</string>
    <string name="no_wifi">点击屏幕，重新加载</string>
    <string name="no_wifi_warn">当前无网络连接</string>

    <string name="smile">好笑</string>
    <string name="dot_comment">\u0020·\u0020评论</string>

    <string name="hot_comment">热门评论</string>
    <string name="putong_comment">普通评论</string>

    <string name="comment_wait">正在为您加载评论......</string>

    <string name="content_wait">正在为您加载内容......</string>

    <string name="user_info_wait">用户详情加载中......</string>

    <string name="user_info_no">当前用户已关闭糗百个人动态</string>

    <string name="qiushi">糗事</string>
    <string name="guxiang">故乡</string>
    <string name="zhiye">职业</string>
    <string name="qiuling">糗龄</string>
    <string name="guanzhu">关注</string>
    <string name="fensi">粉丝</string>
    <string name="qiushijingxuan">糗事精选</string>

    <string name="tiezi">帖子</string>
    <string name="fangwenliang">访问量</string>
    <string name="dengji">等级</string>
    <string name="jingyan">经验</string>
    <string name="qianming">签名</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
</resources>
