<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="league.funny.com.funnyleague.activity.QiuBaiUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/user_info_wait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/smileIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/smile" />

                <TextView
                    style="@style/SmallGreyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/message"
                    android:layout_toRightOf="@+id/smileIcon"
                    android:text="@string/user_info_wait" />
            </LinearLayout>
        </RelativeLayout>

        <TableLayout
            android:id="@+id/user_info_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TableRow android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/tiezi"
                            android:textSize="16sp" />

                    </LinearLayout>
                </RelativeLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <TableRow>

                        <TextView
                            android:id="@+id/text1"
                            style="@style/SuperSmallTextView"
                            android:layout_width="50dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/textview_border" />

                        <TextView
                            android:id="@+id/text2"
                            style="@style/SuperSmallTextView"
                            android:layout_width="50dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/textview_border" />

                        <TextView
                            android:id="@+id/text3"
                            style="@style/SuperSmallTextView"
                            android:layout_width="50dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/textview_border" />

                        <ImageView
                            android:id="@+id/text_forward"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:src="@drawable/forward" />
                    </TableRow>
                </TableLayout>
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/lightGray" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5dp"
                        android:text="@string/fangwenliang"
                        android:textSize="16sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/fangwenliang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="5"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/lightGray" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5dp"
                        android:text="@string/dengji"
                        android:textSize="16sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/dengji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="5"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/lightGray" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5dp"
                        android:text="@string/jingyan"
                        android:textSize="16sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/jingyan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="5"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/lightGray" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5dp"
                        android:text="@string/qianming"
                        android:textSize="16sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/qianming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="5"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/lightGray" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
